--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,25 @@
     <link rel="stylesheet" href="./styles/allStyle.css">
     <link rel="stylesheet" href="./styles/header.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
     <title>Alura Plus</title>
 </head>
+
 <body>
+
+    <!-- INICIO DO CONTAINER -->
     <section class="container principal">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="./assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua">
+        <div>
+            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <img src="./assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua">
+            <a class="container__botao" href="www.alura.com.br">Assine por 12x de 120,00</a>
+            <a class="container__botao botao_secundario" href="www.alura.com.br">Assinar somente o Alura+</a>
+            <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </div>
     </section>
 </body>
+
 </html>
