--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <!-- INICIO DO CONTAINER -->
     <section class="container principal">
-        <div>
+        <div class="container__caixa">
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-            <img src="./assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua">
+            <img src="./assets/Combo.png" alt="O combo+ é a junção do alura+ e o alura lingua" class="container__imagem">
             <a class="container__botao" href="www.alura.com.br">Assine por 12x de 120,00</a>
             <a class="container__botao botao_secundario" href="www.alura.com.br">Assinar somente o Alura+</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
