New section: dispositivos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/allStyle.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/containerSecundario.css">
+    <link rel="stylesheet" href="./styles/devices.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,6 +47,33 @@
                 <a class="container__botao secundario__botao" href="www.alura.com.br">Assinar o Combo+</a>
         </div>
         <img class="secundario__imagem" src="./assets/Telas.png" alt="Tela da alura plus e do alura língua">
+    </section>
+
+    <section class="container secundario">
+        <img class="secundario__imagem" src="./assets/Notebook.png" alt="Um notebook exibindo o alura língua">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus recursos</h2>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até
+                mesmo sem internet.</p>
+        </div>
+    </section>
+
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponivel nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+            <li>
+                <img src="./assets/tv.png" alt="ícone de televisão">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="./assets/computador.png" alt="ícone de computador">
+                <h3 class="lista__item">Computadores</h3>
+            </li>
+            <li>
+                <img src="./assets/celular.png" alt="ícone de celular">
+                <h3 class="lista__item">Celulares</h3>
+            </li>
+        </ul>
     </section>
 </body>
 
