--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/containerSecundario.css">
     <link rel="stylesheet" href="./styles/devices.css">
+    <link rel="stylesheet" href="./styles/footer.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,6 +76,29 @@
             </li>
         </ul>
     </section>
+
+    <footer class="rodape">
+        <img class="rodape__logo" src="./assets/Logo.png" alt="Alura+">
+        <ul class="rodape__lista">
+            <li class="lista__link"> <a class="" href="#">Idioma</a> </li>
+            <li class="lista__link"> <a class="" href="#">Dispositivos compativeis</a> </li>
+            <li class="lista__link"> <a class="" href="#">Contrato de assinatura</a> </li>
+            <li class="lista__link"> <a class="" href="#">Politica de privacidade</a> </li>
+            <li class="lista__link"> <a class="" href="#">Proteção de dados no Brasil</a> </li>
+            <li class="lista__link"> <a class="" href="#">Anuncios personalizados</a> </li>
+            <li class="lista__link"> <a class="" href="#">Ajuda</a> </li>
+        </ul>
+
+        <p class="rodape__texto">
+            ® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a
+            disponibilidade.
+        </p>
+
+        <p class="rodape__texto">
+            Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por
+            Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-
+        </p>
+    </footer>
 </body>
 
 </html>
